--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,13 +20,14 @@ Imports:
     tidybayes (>= 3.0.7),
     tidyr (>= 1.3.2)
 Suggests: 
-    cmdstanr (>= 0.9.0),
     knitr,
     purrr (>= 1.2.1),
     rmarkdown,
+    testthat (>= 3.0.0),
     tidyverse (>= 2.0.0)
 VignetteBuilder: 
     knitr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
+Config/testthat/edition: 3
