--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,3 +30,4 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 Config/testthat/edition: 3
+URL: https://metacoglab.github.io/mRatio/
