implemented rvars functions, implemented metad_draws for extracting model parameters, cleaned up code style

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Imports:
     brms (>= 2.23.0),
     dplyr (>= 1.2.0),
     glue (>= 1.8.0),
+    posterior (>= 1.6.1),
     rlang (>= 1.1.7),
     stats,
     stringr (>= 1.6.0),
